Upgrade hull-node version and change the Hull.Connector API

--- a/package.json
+++ b/package.json
@@ -55,8 +55,9 @@
   },
   "dependencies": {
     "bluebird": "^3.4.7",
+    "express": "^4.14.1",
     "googleapis": "^17.1.0",
-    "hull": "https://github.com/hull/hull-node/archive/7874962b79ed7f9c7ee3a515b45a4ebba743fe0c.tar.gz",
+    "hull": "^0.11.0-beta.1",
     "passport-google-oauth20": "^1.0.0",
     "passport-hubspot": "github:unity/passport-hubspot"
   }
