--- a/package.json
+++ b/package.json
@@ -1,7 +1,4 @@
 {
-  "name": "Google Analytics Ship",
-  "description": "GA <-> Hull",
-  "version": "0.1",
   "homepage": "https://github.com/OutshineLabs/ga-ship",
   "license": "MIT",
   "author": {
@@ -20,7 +17,7 @@
   "scripts": {
     "build": "npm run clean && npm run build:server",
     "build:server": "babel server -d build",
-    "start": "COMBINED=true node build",
+    "start": "npm run build:server && COMBINED=true node build",
     "start:dev": "COMBINED=true babel-watch -L server",
     "test": "npm run test:lint",
     "test:lint": "eslint server",
@@ -50,11 +47,21 @@
     "updtr": "^0.2.1"
   },
   "dependencies": {
+    "babel-cli": "^6.14.0",
+    "babel-eslint": "^7.1.1",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13",
+    "babel-watch": "^2.0.2",
     "bluebird": "^3.4.7",
+    "eslint": "^3.2.2",
+    "eslint-config-airbnb-base": "^11.1.0",
+    "eslint-plugin-import": "^2.2.0",
     "express": "^4.14.1",
     "googleapis": "^17.1.0",
     "hull": "0.11.0-beta.1",
     "passport-google-oauth20": "^1.0.0",
-    "passport-hubspot": "github:unity/passport-hubspot"
+    "passport-hubspot": "github:unity/passport-hubspot",
+    "universal-analytics": "^0.4.13",
+    "updtr": "^0.2.1"
   }
 }
